website changes added

--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
             <a class="contact" href="contact.html">Contact</a>   
         </nav>           
    </header>
-   <div id="home">
-    <img class="index" src="img/yo.jpg" width="150"> 
-    <h4>Hello</h4> 
-    <h2 id="iam" >I'm Adriana Fayos</h2> 
-    <h3>Bootcamp Frontend React Student</h3> 
-    <a href="me.html"><button type="button">About me</button></a>
-</div>
+   <div class="home">
+         <div class="hello">
+              <h4>Hello</h4> 
+              <h2 id="iam" >I'm Adriana Fayos</h2> 
+              <br><br>
+              <a href="me.html"><button type="button">About me</button></a>
+        </div>
+        <img class="index" src="img/yo.jpg" width="150"> 
+   </div>
 </body>
-
+<br><br>
+<br><br>
 <footer> 
-    <a title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-    <a title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
 </footer>
 
 </html>
