--- a/me.html
+++ b/me.html
@@ -16,16 +16,20 @@
             <a class="contact" href="contact.html">Contact</a>   
         </nav>         
     </header>
-    <div id="aboutme">
-        <img src="img/me.jpg" width="150"> 
-        <h1>ADRIANA FAYOS</h1>
-        <h3>Bootcamp Frontend React Student</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At autem nostrum repellendus iusto? Maxime soluta deleniti laboriosam eos a fugit quasi quas, eum nesciunt architecto quidem molestiae ab tempora nemo!</p>
+    <div class="aboutme">
+        <img class="foto" src="img/me.jpg" width="220"> 
+        <div class="texto">
+            <h1>ADRIANA FAYOS</h1>
+            <h3>Bootcamp Frontend React Student</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae aperiam omnis, voluptatum esse obcaecati minus, nesciunt corporis ipsa delectus culpa, error eligendi odio doloremque nemo sequi nam. Libero, eius perspiciatis</p>
+        </div>  
     </div>
 
 </body>
+<br><br>
+<br><br>
 <footer> 
-    <a title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-    <a title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
 </footer>
 </html>
