--- a/services.html
+++ b/services.html
@@ -22,9 +22,12 @@
         <p>We are working hard to add new features and improve the usability of our site. Stay tuned!</p>
     </div>
 
-    <footer> 
-        <a title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-        <a title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
-    </footer>
+
 </body>
+<br><br>
+<br><br>
+<footer> 
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+</footer>
 </html>
