--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
     <br><br>
     <article> 
         <section id="me">
-            <img src="img/ubi.jpg" width="30">
+            <img src="img/ubi.png" width="30">
             <p>Valencia (Spain)</p>
-            <img src="img/tlf.jpg" width="30">
+            <img src="img/tlf.png" width="30">
             <p>606126056</p>
-            <img src="img/email.jpg" width="30">
+            <img src="img/email.png" width="30">
             <p>adrifayosperis@gmail.com</p>
         </section>  
         <section id="form"> <form action="/signup" method="POST">
@@ -51,8 +51,8 @@
 <br><br>
 <br><br>
 <footer> 
-    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.png" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.png" width="25"></a>
 </footer>
 
 </html>
