--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
               <br><br>
               <a href="me.html"><button type="button">About me</button></a>
         </div>
-        <img class="index" src="img/yo.jpg" width="150"> 
+        <img class="index" src="img/yo.png" width="150"> 
    </div>
 </body>
 <br><br>
 <br><br>
 <footer> 
-    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.png" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.png" width="25"></a>
 </footer>
 
 </html>
