--- a/me.html
+++ b/me.html
@@ -17,7 +17,7 @@
         </nav>         
     </header>
     <div class="aboutme">
-        <img class="foto" src="img/me.jpg" width="220"> 
+        <img class="foto" src="img/me.png" width="220"> 
         <div class="texto">
             <h1>ADRIANA FAYOS</h1>
             <h3>Bootcamp Frontend React Student</h3>
@@ -29,7 +29,7 @@
 <br><br>
 <br><br>
 <footer> 
-    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.jpg" width="25"></a>
-    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.jpg" width="25"></a>
+    <a class="github" title="GitHub" href="https://github.com/AdrianaFayos" target="_blank"><img src="img/github.png" width="25"></a>
+    <a class="linkedin" title="Linkedin" href="https://www.linkedin.com/in/adrianafayos/" target="_blank"><img src="img/link.png" width="25"></a>
 </footer>
 </html>
