added photo  background

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
            <br><br> 
            Message:
            <br><br> 
-           <textarea name="message" cols="50" rows="10"></textarea>
+           <textarea name="message" cols="50" rows="10" placeholder="Type your text here"></textarea>
            <br><br>
            <button type="button">Send</button>
            </form>
