--- a/me.html
+++ b/me.html
@@ -21,7 +21,11 @@
         <div class="texto">
             <h1>ADRIANA FAYOS</h1>
             <h3>Bootcamp Frontend React Student</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae aperiam omnis, voluptatum esse obcaecati minus, nesciunt corporis ipsa delectus culpa, error eligendi odio doloremque nemo sequi nam. Libero, eius perspiciatis</p>
+            <p>Lorem ipsum dolor sit amet. Eos nihil numquam aut officiis libero sit fugit fugit est neque temporibus nam tempore reiciendis. Qui rerum vero vel praesentium consequuntur vel odio saepe ad repellendus molestiae id minima tempora. Et quaerat dignissimos sed laborum labore eum repellendus ipsum. Eos error voluptatum qui rerum distinctio sit magnam rerum sit doloribus natus qui pariatur minus?
+
+                Ea illo voluptate vel voluptatem facilis eos dolores ipsa non corporis enim aut fugiat voluptas et aliquid neque. Et quam galisum et laudantium facere ea molestiae rerum ut minima maiores non repellat repellendus qui quidem tempore. Et dolorem sint in nobis rerum rem tempore molestiae qui distinctio obcaecati non galisum beatae qui nemo fuga.
+                
+                Id dignissimos esse in eligendi quae qui aliquam facere. At aperiam voluptatibus est porro ipsa assumenda autem Quis explicabo non distinctio nostrum a voluptatem sunt.</p>
         </div>  
     </div>
 
